tests/parser/tests/cases/should_fail/unclosed_unicode_literal/case.hash
k := '\u{005a';
