tests/parser/tests/cases/should_fail/unclosed_unicode_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\u{005a';
  |          ^^^^^^ here
  = note: Invalid character escape sequence Expected '}' after a escape sequence
